--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+#root {
+  margin-left: 220px;
+  margin-top: 40px;
 }
 
 ul {
