--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,10 +8,10 @@ body {
   font-family: sans-serif;
 }
 
-#root {
+/* #root {
   margin-left: 220px;
   margin-top: 40px;
-}
+} */
 
 ul {
   list-style: none;
