--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,10 @@
-.App {
-  margin-left: 220px;
+#root {
+  margin-left: 0;
   margin-top: 40px;
+}
+
+@media screen and (min-width: 600px) {
+  #root {
+    margin-left: 220px;
+  }
 }
