--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
 #root {
   margin-left: 0;
-  margin-top: 40px;
+  padding-top: 40px;
 }
 
 @media screen and (min-width: 768px) {
   #root {
-    margin-left: 220px;
+    padding-left: 220px;
   }
 }
