--- a/client/src/components/common/notes.css
+++ b/client/src/components/common/notes.css
@@ -3,7 +3,7 @@
   border: 6px solid #555;
   border-radius: 5px 5px 0 0;
   width: 100%;
-  max-height: 600px;
+  max-height: 350px;
   overflow-y: scroll;
 }
 
@@ -12,21 +12,26 @@
 }
 
 .note-content {
-  display: inline;
+  display: inline-block;
   border-radius: 9px;
-  background-color: lightgray;
+  background-color: #eaeaea;
   margin: 3px 0;
   padding: 4px 6px;
   position: relative;
 }
 
+.note-content p {
+  margin: 0;
+  padding: 0;
+}
+
 .note-content::after {
   content: " ";
   position: absolute;
-  top: 95%;
-  left: 10%;
-  border: 5px solid;
-  border-color: lightgray transparent transparent;
+  bottom: -12px;
+  left: 4px;
+  border: 7px solid;
+  border-color: #eaeaea transparent transparent;
 }
 
 .note-footer {
@@ -57,9 +62,13 @@
   background-color: rgba(226, 149, 76, .7);
 }
 
+.note-submit:disabled {
+  background-color: lightgray;
+  cursor: default;
+}
+
 @media screen and (min-width: 600px) {
   .note-container, .note-create {
     max-width: 400px;
-    margin-left: 20px;
   }
 }
