--- a/client/src/components/Create/NewCustomer.css
+++ b/client/src/components/Create/NewCustomer.css
@@ -4,7 +4,21 @@
   left: 50%;
   transform: translateX(-50%);
   border: 1px solid black;
+  border-radius: 9px;
   background-color: white;
-  padding: 1rem;
+  padding: 1.5rem;
   z-index: 10;
+}
+
+.new-form button {
+  padding: .6em 1em;
+  margin-right: 1em;
+  background-color: white;
+  border: .5px solid lightgray;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5)
+}
+
+.new-form button:hover {
+  cursor: pointer;
+  background-color: lightgray;
 }
